Add NoticeView, Unfinished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="drawer_close">close</string>
     <string name="exit">再按一次返回键退出</string>
 
+
+    <string name="test_string">Adobe以8亿美元现金收购图库网站Fotolia，
+            会将其与Creative Cloud整合 | 此次收购对 Adobe 来说意义重大，
+            因为Adobe在服务的正是不计其数的摄影师和设计师。
+            买下一个图库网站将能加深 Adobe 与其用户业已存在的纽带。
+            Fotolia将“继续作为一款独立的图库网站提供服务"</string>
+
 </resources>
